--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spacejunk</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>CONSTELLATION</h1>
+        <p>Constellation</p>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
