added some initial content

--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spacejunk</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <h1>CONSTELLATION</h1>
-        <p>Constellation</p>
+      <h1>SURROUNDED BY TRASH</h1>
     </header>
-    <main></main>
+    <main>
+      <section id="visual">
+        <div class="noise"></div>
+      </section>
+      <section>
+        <figure class="overlap">
+          <img
+            src="images/debris_expanded.png"
+            alt="Debris in orbit around Earth"
+          />
+        </figure>
+        <article class="overlap">
+          <h2>No more space travel?</h2>
+          <p>
+            Not being able to travel into space anymore would be a huge loss for
+            us all, but why is this even happening? Currently earth is being
+            orbited by millions of objects. Some of these are space stations and
+            satellites currently in use for a number of reasons. However, a
+            large part of the space is being taken up by literal junk...
+            spacejunk. This consists of old sattelites, broken equipment or
+            simply debris from either of these. For objects to stay in orbit
+            around the earth they have to travel at enormous speeds. These
+            objects travel at around 7 kilometers per second. At that speed it
+            would take you about one and a half hours to travel a complete
+            circle around the earth.
+          </p>
+        </article>
+      </section>
+    </main>
     <footer></footer>
-</body>
+  </body>
 </html>
