added animated space debris

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section>
         <figure class="overlap">
           <img
-            src="images/debris_expanded.png"
+            src="images/debris_feathered.png"
             alt="Debris in orbit around Earth"
           />
         </figure>
@@ -38,7 +38,11 @@
           </p>
         </article>
       </section>
+      <section class="spacejunk">
+        <div id="debris-container"></div>
+      </section>
     </main>
     <footer></footer>
+    <script src="script.js"></script>
   </body>
 </html>
