added initial solutions sections

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           />
         </figure>
         <article class="overlap">
-          <h2>No more space travel?</h2>
+          <h2>NO MORE SPACE TRAVEL?</h2>
           <p>
             Not being able to travel into space anymore would be a huge loss for
             us all, but why is this even happening? Currently earth is being
@@ -40,6 +40,38 @@
       </section>
       <section class="spacejunk">
         <div id="debris-container"></div>
+      </section>
+      <section class="solutions">
+        <article>
+          <h2>SOLUTIONS</h2>
+          <p>
+            So what can be done about this problem? There are solutions that can
+            either prevent more space debris in the future and solutions that
+            can clean up the debris currently in orbit around our planet.
+          </p>
+          <span>
+            <button>01</button>
+            <button>02</button>
+            <button>03</button>
+          </span>
+        </article>
+        <article class="option">
+          <h4>FORCED RE-ENTRY</h4>
+          <p>
+            Not being able to travel into space anymore would be a huge loss for
+            us all, but why is this even happening? Currently earth is being
+            orbited by millions of objects. Some of these are space stations and
+            satellites currently in use for a number of reasons. However, a
+            large part of the space is being taken up by literal junk...
+            spacejunk. This consists of old sattelites, broken equipment or
+            simply debris from either of these. For objects to stay in orbit
+            around the earth they have to travel at enormous speeds. These
+            objects travel at around 7 kilometers per second. At that speed it
+            would take you about one and a half hours to travel a complete
+            circle around the earth.
+          </p>
+          <img src="images/meteor.jpg" alt="" />
+        </article>
       </section>
     </main>
     <footer></footer>
