updated intro text

--- a/index.html
+++ b/index.html
@@ -24,17 +24,15 @@
         <article class="overlap">
           <h2>NO MORE SPACE TRAVEL?</h2>
           <p>
-            Not being able to travel into space anymore would be a huge loss for
-            us all, but why is this even happening? Currently earth is being
-            orbited by millions of objects. Some of these are space stations and
-            satellites currently in use for a number of reasons. However, a
-            large part of the space is being taken up by literal junk...
-            spacejunk. This consists of old sattelites, broken equipment or
-            simply debris from either of these. For objects to stay in orbit
-            around the earth they have to travel at enormous speeds. These
-            objects travel at around 7 kilometers per second. At that speed it
-            would take you about one and a half hours to travel a complete
-            circle around the earth.
+            Humanity has been using satellites for more than half a decade for,
+            among other applications, communication, observation, navigation and
+            science. These satellites are sent up into space and are then placed
+            in an orbit around the earth. This means they must gain enough speed
+            to outrun the earth's gravity so that they are able to orbit the
+            earth almost indefinitely. However, the amount of satellites
+            currently in orbit around the earth is getting out of hand and if we
+            don't collectively do something about this, the consequences will be
+            very severe.
           </p>
         </article>
       </section>
@@ -88,7 +86,7 @@
             can clean up the debris currently in orbit around our planet.
           </p>
           <div class="solution_btns">
-            <button>01</button>
+            <button class="btn_active">01</button>
             <button>02</button>
             <button>03</button>
           </div>
