--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
       <h1>SURROUNDED BY TRASH</h1>
     </header>
     <main>
+      <aside>
+        <div class="hud">
+          <h3>SHIP HEALTH</h3>
+          <div class="bar">
+            <div class="health"></div>
+          </div>
+          <p>
+            NOTE: Try to avoid hitting debris as much as possible as it will
+            damage your spaceship
+          </p>
+        </div>
+      </aside>
       <section id="visual">
         <div class="noise"></div>
       </section>
