--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <aside>
-        <div class="hud">
+        <div id="hud" class="hidden">
           <h3>SHIP HEALTH</h3>
           <div class="bar">
             <div class="health"></div>
