added second debris container

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </article>
       </section>
       <section class="spacejunk">
-        <div id="debris-container"></div>
+        <div class="debris-containers" id="debris-container"></div>
       </section>
       <section class="future">
         <h2>WHAT WILL HAPPEN?</h2>
@@ -91,7 +91,7 @@
         </article>
       </section>
       <section class="spacejunk">
-        <div id="debris-container2"></div>
+        <div class="debris-containers" id="debris-container2"></div>
       </section>
       <section class="solutions">
         <article>
