added and styled rocket image

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <section id="visual">
         <div class="noise"></div>
       </section>
+      <section class="history">
+        <div><img src="images/rocket2.png" alt="Rocket launch" /></div>
+      </section>
       <section>
         <figure class="overlap">
           <img
