added easter egg

--- a/index.html
+++ b/index.html
@@ -36,7 +36,45 @@
         <div class="noise"></div>
       </section>
       <section class="history">
-        <div><img src="images/rocket2.png" alt="Rocket launch" /></div>
+        <figure class="overlap">
+          <img src="images/rocket2.png" alt="Rocket launch" />
+        </figure>
+        <article class="overlap">
+          <div class="corner-borders">
+            <h2>TO INFINITY AND BEYOND</h2>
+            <p>
+              In the second half of the 20th century, humanity ventured beyond
+              Earth into the unknown. The space race between the United States
+              and the Soviet Union unfolded, culminating in the historic launch
+              of Sputnik 1 in 1957 and Yuri Gagarin's orbital feat in 1961. The
+              United States followed with their Apollo missions and in landed,
+              for the first time in history, on the moon in 1969.
+            </p>
+            <p>
+              Advancements in satellite technology defined the 1980s, impacting
+              communication, weather monitoring, and scientific research.
+              Satellite communications expanded to carry television programs,
+              transforming how people receive information. Satellites played a
+              pivotal role in discovering the ozone hole over Antarctica,
+              pinpointing forest fires, and providing images of the Chernobyl
+              nuclear disaster in 1986. Astronomical satellites, such as the
+              Hubble Space Telescope and the more resent JWST, contributed to
+              the exploration of new stars and offered a fresh perspective on
+              the center of our galaxy. The knowlegde we gained by going into
+              space changed the way we look at the universe and our place within
+              it.
+            </p>
+            <p>
+              The International Space Station, a symbol of international
+              collaboration, has served as a continuous orbiting laboratory
+              since the year 2000. This high-flying laboratory pushes humanity
+              towards global cooperation in space exploration as it has been
+              continuously occupied and serviced by a variety of visiting
+              spacecraft, fostering collaboration among astronauts, cosmonauts,
+              and space tourists from 17 different nations.
+            </p>
+          </div>
+        </article>
       </section>
       <section>
         <figure class="overlap">
@@ -46,18 +84,20 @@
           />
         </figure>
         <article class="overlap">
-          <h2>NO MORE SPACE TRAVEL?</h2>
-          <p>
-            Humanity has been using satellites for more than half a decade for,
-            among other applications, communication, observation, navigation and
-            science. These satellites are sent up into space and are then placed
-            in an orbit around the earth. This means they must gain enough speed
-            to outrun the earth's gravity so that they are able to orbit the
-            earth almost indefinitely. However, the amount of satellites
-            currently in orbit around the earth is getting out of hand and if we
-            don't collectively do something about this, the consequences will be
-            very severe.
-          </p>
+          <div class="corner-borders">
+            <h2>NO MORE SPACE TRAVEL?</h2>
+            <p>
+              Humanity has been using satellites for more than half a decade
+              for, among other applications, communication, observation,
+              navigation and science. These satellites are sent up into space
+              and are then placed in an orbit around the earth. This means they
+              must gain enough speed to outrun the earth's gravity so that they
+              are able to orbit the earth almost indefinitely. However, the
+              amount of satellites currently in orbit around the earth is
+              getting out of hand and if we don't collectively do something
+              about this, the consequences will be very severe.
+            </p>
+          </div>
         </article>
       </section>
       <div class="warning-banner">
