updated infobox transitions

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div>
-          <div id="satellite-info" class="info-box">
+          <div id="satellite-info" class="info-box info-box-hidden">
             <h3 class="info-box-h3">01</h3>
             <h4 class="info-box-h4">SATELLITES</h4>
             <p class="info-box-p">
@@ -167,19 +167,19 @@
               Earth.
             </p>
           </div>
-          <div id="metal-info" class="info-box">
+          <div id="metal-info" class="info-box info-box-hidden">
             <h3 class="info-box-h3">02</h3>
             <h4 class="info-box-h4">SATELLITE DEBRIS</h4>
             <p class="info-box-p">Lots of debris from satellites.</p>
           </div>
-          <div id="booster-info" class="info-box">
+          <div id="booster-info" class="info-box info-box-hidden">
             <h3 class="info-box-h3">03</h3>
             <h4 class="info-box-h4">ROCKETS</h4>
             <p class="info-box-p">
               Lots of rockets leave behind booster parts or fuel tanks.
             </p>
           </div>
-          <div id="glove-info" class="info-box">
+          <div id="glove-info" class="info-box info-box-hidden">
             <h3 class="info-box-h3">04</h3>
             <h4 class="info-box-h4">MISCELLANEOUS DEBRIS</h4>
             <p class="info-box-p">
